# omnizk

./: .gitmodules  Cargo.toml  dev-docs.md
crates/codegen-tritonvm/: Cargo.toml
crates/codegen-tritonvm/src/: codegen.rs  lib.rs  ty.rs
crates/codegen-tritonvm/src/codegen/: emit.rs  inst_buf.rs  sem_tests.rs
crates/codegen-tritonvm/src/codegen/sem_tests/: add.rs  fib.rs  func_call.rs
crates/codegen-tritonvm/src/codegen/sem_tests/block/: loop_in_block.rs  loop_single.rs  loop_with_block.rs  nested_block.rs  nested_block_br.rs  nested_block_br_if.rs  one_block.rs  one_block_br.rs  one_block_br_if.rs
crates/codegen-tritonvm/src/codegen/sem_tests/locals/: locals_func_exit.rs  locals_set_get.rs
crates/frontend-shared/src/: mod_builder.rs
crates/ir-transform/: Cargo.toml
crates/ir-transform/src/: lib.rs  tests_util.rs
crates/ir/src/: pass.rs
crates/rust-wasm-tests-helper/src/: lib.rs
crates/rust-wasm-tests/add/src/: add.rs
crates/wasm/src/: module_translator.rs  types.rs
