[package]
name = "c2zk-codegen-tritonvm"
version = "0.1.0"
description = "Triton VM backend for c2zk"

repository = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
authors = { workspace = true }

[dependencies]
c2zk-ir = { workspace = true }
c2zk-ir-transform = { workspace = true }
c2zk-codegen-shared = { workspace = true }
# triton-vm = { path = "../../../triton-vm/triton-vm" }
# triton-opcodes = { path = "../../../triton-vm/triton-opcodes" }
triton-vm = { version = "0.31.1" }
triton-opcodes = { version = "0.31.0" }
twenty-first = "0.30"
itertools = "0"

[dev-dependencies]
c2zk-frontend = { workspace = true }
c2zk-rust-wasm-tests-helper = { workspace = true }
c2zk-rust-wasm-tests-fib = { workspace = true }
c2zk-rust-wasm-tests-add = { workspace = true }
wat = { workspace = true }
wasmprinter = { workspace = true }
expect-test = "1.0.1"
wasmtime = "5.0.0"
